# elyr-vault-public

./: README.md
contracts/evm/: PrivateVaultV3.sol
contracts/evm/abi/: PrivateVault.abi.json
contracts/evm/base/: VaultActions.sol  VaultConditions.sol  VaultCreation.sol  VaultRecipientVerify.sol  VaultStorage.sol  VaultTransfers.sol  VaultViews.sol
contracts/evm/interfaces/: IConfidentialERC20.sol  IPrivateVault.sol
contracts/evm/libraries/: ActivitySigLib.sol  ConditionsLib.sol
contracts/evm/types/: VaultTypes.sol
contracts/solana/idl/: inco_token.json  inco_vault.json
contracts/solana/programs/inco-vault/: Cargo.toml
contracts/solana/programs/inco-vault/src/: associated_token.rs  lib.rs  memo.rs  metadata.rs  token.rs  token_2022.rs
contracts/solana/programs/inco-vault/src/vault/: actions.rs  conditions.rs  creation.rs  errors.rs  events.rs  helpers.rs  mod.rs  state.rs  types.rs
contracts/solana/types/: inco_token.json  inco_token.ts  inco_vault.ts
docs/: guide.md
