[package]
name = "inco-vault"
version = "0.1.0"
description = "Private Vault - Encrypted Vault Program for Solana using Inco Lightning"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "inco_vault"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build", "inco-lightning/idl-build"]

[dependencies]
anchor-lang = {version = "0.31.1", features = ["init-if-needed"]}
anchor-spl = "0.31.1"
inco-lightning = { version = "0.1.4", features = ["cpi"] }
